# entropy-experiment

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  appveyor.yml
src/: CMakeLists.txt  displ.cpp  displ.hpp  entropy.cpp  entropy.h  lineChart.cpp  lineChart.hpp  main.cpp  particle.cpp  particle.h  symul.cpp  symul.h  vec2.h
